fix: layout shift

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@ header {
   left: 0;
   z-index: 1;
   background-color: var(--rgba-secondary);
-
 }
 
 .logo {
@@ -48,7 +47,6 @@ header {
   padding: 8px 12px;
   outline: none;
   user-select: none;
-  font-weight: 500;
   line-height: 1;
   border-radius: 4px;
   font-size: 1rem;
@@ -66,7 +64,6 @@ header {
 .NavigationMenuLink {
   display: block;
   text-decoration: none;
-  font-size: 1rem;
   line-height: 1;
 }
 
@@ -74,7 +71,7 @@ header {
 
 section[class="hero"] .container {
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: repeat(2, minmax(min-content, 1fr));
   place-items: center;
   padding: 1rem;
 }
@@ -113,7 +110,7 @@ section[class="ProductsSection"] .container {
   padding-top: 1rem;
 }
 
-.ProductsColumn picture {
+.ProductsColumn img {
   aspect-ratio: 16/9;
 }
 
@@ -123,7 +120,7 @@ section[id="refurbished"] {
   background-color: var(--alternate-color);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  object-fit: cover;
   background-image: url('/pexels-david-bartus-963278.jpg');
 
   @supports (background-image: url('/pexels-david-bartus-963278.webp')) {
@@ -199,7 +196,7 @@ section[id="faq"] .container {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  font-size: 15px;
+  font-size: 1rem;
   text-align: left;
 }
 
