--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
 
 :root {
     --primary-color: #BFBFBF;
@@ -32,7 +31,8 @@ body {
     line-height: 1.75;
     color: var(--secondary-color);
     background-color: var(--alternate-color);
-    font-family: 'Montserrat', sans-serif;
+    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
+    font-weight: normal;
 }
 
 .container {
@@ -90,8 +90,8 @@ section h2 {
 
 html,
 body {
-    width: auto !important;
-    overflow-x: hidden !important
+    width: auto;
+    overflow-x: hidden;
 }
 
 /* End of global styling */
